# learn

./: .gitignore
cpp/: CMakeLists.txt  main.cpp  main0.cpp  main1.cpp  main2.cpp  main3.cpp
opencv/: CMakeLists.txt  main.cpp  myalg.cpp  myalg.h  tracker.h  video.cpp
opencv/notes/: 图像变换和分割.txt  目标跟踪.txt
opencv/rune_optim/: CMakeLists.txt  rune_optim.cpp
